--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -55,7 +55,7 @@
     }
     else
     {
-        <h1>ENGLISH BATTLE !!! TUTUTUTU TU TU TU TU !</h1>
+        <h1>READY FOR THE RUMBLE !!</h1>
     }
 }
 
