--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,28 +19,29 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                @{
-                    Joueur joueur = (Joueur)Context.Session["joueur"];
-
-                    if (joueur == null)
-                    {
-                        <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", new { area = "" }, new { @class = "nav-link" })</li>
-                    }
-                    else
-                    {
-                        <li class="nav-item"><span class="navbar-text">Bienvenue @joueur.prenom  @joueur.nom</span></li>
-                        <li class="nav-item">@Html.ActionLink("Question", "Question", "Question", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Déconnexion", "Logout", "Account", new { area = "" }, new { @class = "nav-link" })</li>
-                    }
-                }
-            </ul>
             @{
                 Partie partie = (Partie)Context.Session["partie"];
+                Joueur joueur = (Joueur)Context.Session["joueur"];
 
-                if (partie != null)
+                if (joueur == null)
                 {
-                    <li class="nav-item"><span class="navbar-text">Score : @partie.score</span></li>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", new { area = "" }, new { @class = "nav-link" })</li>
+                    </ul>
+                }
+                else
+                {
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">@Html.ActionLink("Question", "Question", "Question", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Déconnexion", "Logout", "Account", new { area = "" }, new { @class = "nav-link" })</li>
+                    </ul>
+
+                    <span class="navbar-text">Bienvenue @joueur.prenom  @joueur.nom</span>
+
+                        if (partie != null)
+                        {
+                            <span class="navbar-text">Score : @partie.score</span>
+                        }
                 }
             }
         </div>
