--- a/Views/Question/End.cshtml
+++ b/Views/Question/End.cshtml
@@ -2,11 +2,6 @@
 @using EnglishBattle.data.Services
 @using EnglishBattle.data
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="~/Content/end.css" />
-
 @{
     //ViewBag.Title = "End";
     //ViewBag.End = "Félicitations ! Vous avez réussi à trouver le prétérit et le participe passé de tous les verbes irréguliers !";
@@ -23,13 +18,15 @@
     <h1>FIN DE PARTIE !</h1>
 </div>
 
-<div class="d-flex justify-content-center">
-    <h3>Voulez-vous refaire une partie ?</h3>
+<div class="d-flex justify-content-center my-4">
+    <p>Voulez-vous refaire une partie ?</p>
 </div>
 
-<div class="d-flex justify-content-center">
-    <button type="button" class="btn btn-success" id="boutonOui" onclick="location.href='../Question/Question';"> Oui ! </button>
-    <button type="button" class="btn btn-danger" id="boutonNon" onclick="location.href='../Account/index';"> Non ! </button>
+<div class="d-flex justify-content-center mt-4">
+    <div class="d-flex justify-content-between w-25">
+        <button type="button" class="btn btn-lg btn-success" id="boutonOui" onclick="location.href='../Question/Question';"> Oui ! </button>
+        <button type="button" class="btn btn-lg btn-danger" id="boutonNon" onclick="location.href='../Account/index';"> Non ! </button>
+    </div>
 </div>
 
 
