--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,74 +1,72 @@
 ﻿@model EnglishBattleApp.Models.RegisterViewModel
+@using EnglishBattle.data.Services
+@using EnglishBattle.data
 
 @{
     ViewBag.Title = "Register";
 }
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="~/Content/register.css">
-
-<h1>English Battle Inscription</h1>
+<h1 class="text-center mb-4">English Battle Inscription</h1>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <!-- Nom -->
     <div class="form-horizontal">
         <h2 class="viewBagErreurInscription">@ViewBag.erreurInscription</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nom, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+
+        <!-- Nom -->
+        <div class="form-group d-flex">
+            @Html.LabelFor(model => model.Nom, htmlAttributes: new { @class = "col-2" })
+            <div class="col-10">
                 @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <!-- Prénom -->
-        <div class="form-group">
-            @Html.LabelFor(model => model.Prenom, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group d-flex">
+            @Html.LabelFor(model => model.Prenom, htmlAttributes: new { @class = "col-2" })
+            <div class="col-10">
                 @Html.EditorFor(model => model.Prenom, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Prenom, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <!-- Email -->
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group d-flex">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "col-2" })
+            <div class="col-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <!-- Mdp1 -->
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group d-flex">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "col-2" })
+            <div class="col-10">
                 @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <!-- Mdp2 -->
-        <div class="form-group">
-            @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group d-flex">
+            @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "col-2" })
+            <div class="col-10">
                 @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <!-- Niveau -->
-        <div class="form-group">
-            @Html.LabelFor(model => model.Niveau, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="niveau">
-                <select name="niveau" id="niveau-select">
+        <div class="form-group d-flex">
+            @Html.LabelFor(model => model.Niveau, htmlAttributes: new { @class = "col-2" })
+            <div class="col-10">
+                <select name="niveau" id="niveau-select" class="form-control">
                     <option value="1">Débutant</option>
                     <option value="2">Intermédiaire</option>
                     <option value="3">Expert</option>
@@ -77,34 +75,25 @@
         </div>
 
         <!-- Villes -->
-        @using EnglishBattle.data.Services
-        @using EnglishBattle.data
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Ville, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="ville">
+        <div class="form-group d-flex">
+            @Html.LabelFor(model => model.Ville, htmlAttributes: new { @class = "col-2" })
+            <div class="col-10">
                 @{
                     VilleService villeService = new VilleService(new EnglishBattle.data.EnglishBattleEntities());
                     List<Ville> ville = villeService.GetVilleList();
 
-                    @Html.DropDownListFor(n => n.Ville, new SelectList(ville, "id", "nom"));    //3h30 pour trouver ca
+                    @Html.DropDownListFor(n => n.Ville, new SelectList(ville, "id", "nom"), htmlAttributes: new { @class="form-control" });    //3h30 pour trouver ca
 
                 }
             </div>
         </div>
 
         <!-- Bouton -->
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10 bouton">
-                <input type="submit" value="S'inscrire" class="btn btn-default" />
-            </div>
+        <div class="form-group d-flex justify-content-center">
+                <input type="submit" value="S'inscrire" class="btn btn-lg btn-dark" />
         </div>
     </div>
 }
-
-<div id="actionLinkRegister">
-    @Html.ActionLink("Connexion", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
