--- a/Views/Question/Question.cshtml
+++ b/Views/Question/Question.cshtml
@@ -2,9 +2,6 @@
 @using EnglishBattle.data.Services
 @using EnglishBattle.data
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="~/Content/question.css" />
 
 @{
@@ -20,9 +17,8 @@
         Partie partie = partieService.GetPartieByJoueur(joueur.id);
 
 
-        <h1>ENGLISH BATTLE</h1>
-        <h2>Utilisateur : @joueur.prenom, meilleur score : @partie.score verbes</h2>
-        <h1>Question @Session["numQuest"] : le verbe @ViewBag.verbe</h1>
+        <h2 class="text-center my-4 questionScoreLine">Utilisateur : @joueur.prenom, meilleur score : @partie.score verbes</h2>
+        <h1 class="text-center my-4">Question @Session["numQuest"] : le verbe @ViewBag.verbe</h1>
     }
     else
     {
@@ -46,34 +42,30 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="aligner">
+        <div class="d-flex align-items-center my-5">
 
-            <h3>@ViewBag.verbe</h3>
+            <h3 class="text-center col-2">@ViewBag.verbe</h3>
 
-            <div class="form-group" id="preterit">
-                @Html.LabelFor(model => model.Preterit, htmlAttributes: new { @class = "control-label col-md-6" })
-                <div class="col-xs-8">
+            <div class="form-group col-5" id="preterit">
+                @Html.LabelFor(model => model.Preterit, htmlAttributes: new { @class = "text-center" })
+                <div class="">
                     @Html.EditorFor(model => model.Preterit, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Preterit, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group" id="participePasse">
-                @Html.LabelFor(model => model.ParticipePasse, htmlAttributes: new { @class = "control-label col-md-6" })
-                <div class="col-xs-8">
+            <div class="form-group col-5" id="participePasse">
+                @Html.LabelFor(model => model.ParticipePasse, htmlAttributes: new { @class = "text-center" })
+                <div class="">
                     @Html.EditorFor(model => model.ParticipePasse, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ParticipePasse, "", new { @class = "text-danger" })
                 </div>
             </div>
 
         </div>
-
-        <div id="boutonQuestion">
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Valider" class="btn btn-default" />
-                </div>
-            </div>
+        
+        <div class="form-group d-flex justify-content-center">
+            <input type="submit" value="Valider" class="btn btn-lg btn-dark" />
         </div>
     </div>
 }
