--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,16 +32,18 @@
                 else
                 {
                     <ul class="navbar-nav mr-auto">
+                        <li class="nav-item"><span class="navbar-text">Bienvenue @joueur.prenom  @joueur.nom</span></li>
                         <li class="nav-item">@Html.ActionLink("Question", "Question", "Question", new { area = "" }, new { @class = "nav-link" })</li>
-                        <li class="nav-item">@Html.ActionLink("Déconnexion", "Logout", "Account", new { area = "" }, new { @class = "nav-link" })</li>
                     </ul>
 
-                    <span class="navbar-text">Bienvenue @joueur.prenom  @joueur.nom</span>
+                    if (partie != null)
+                    {
+                        <ul class="navbar-nav mx-auto"><li class="nav-item"><span class="navbar-text">Score : @partie.score</span></li></ul>
+                    }
 
-                        if (partie != null)
-                        {
-                            <span class="navbar-text">Score : @partie.score</span>
-                        }
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">@Html.ActionLink("Déconnexion", "Logout", "Account", new { area = "" }, new { @class = "nav-link" })</li>
+                    </ul>
                 }
             }
         </div>
@@ -58,7 +60,6 @@
         }
 
         @RenderBody()
-        <hr />
         <footer>
             
         </footer>
